# Milk-tea-robot

./: README.md
planar2r_description/: CMakeLists.txt  package.xml
planar2r_description/config/: joints.yaml
planar2r_description/launch/: config.rviz  init_config.yaml  rviz.launch  rviz_genConfig.launch  rviz_simpleTraj.launch
planar2r_description/urdf/: planar2r_model.urdf
planar2r_kinematics/: CMakeLists.txt  package.xml
planar2r_kinematics/include/: ROS_Planar2R.hpp
planar2r_kinematics/scripts/: planar2r_kinematics_plotXY.py
planar2r_kinematics/src/: forwardKinematics.cpp  genConfig.cpp  geometry_shapes.cpp  simpleTraj.cpp
planar3r_description/: CMakeLists.txt  package.xml
planar3r_description/config/: joints.yaml
planar3r_description/launch/: config.rviz  init_config.yaml  rviz.launch  rviz_simpleTraj.launch
planar3r_description/urdf/: planar3r_model.urdf
planar3r_kinematics/: CMakeLists.txt  package.xml
planar3r_kinematics/data/: analytical_ik_1.txt  analytical_ik_2.txt  numerical_ik.txt  planar3rTrajError_aik.txt  planar3rTrajError_nik.txt  time.txt
planar3r_kinematics/include/: ROS_Planar3R.hpp
planar3r_kinematics/scripts/: planar3r_kinematics_plotXY.py
planar3r_kinematics/src/: forwardKinematics.cpp  geometry_shapes.cpp  simpleTraj.cpp
spatial3r_description/: CMakeLists.txt  package.xml
spatial3r_description/config/: joints.yaml
spatial3r_description/launch/: config.rviz  init_config.yaml  rviz.launch
spatial3r_description/urdf/: spatial3r_model.urdf
spatial3r_kinematics/: CMakeLists.txt  package.xml
spatial3r_kinematics/include/: ROS_Spatial3R.hpp
spatial3r_kinematics/scripts/: spatial3r_kinematics_plotXY.py
spatial3r_kinematics/src/: forwardKinematics.cpp  geometry_shapes.cpp
ur_description/: ur5_rviz_config.rviz
ur_description/launch/: ur5_rviz.launch
